# the-arena

./: LICENSE
the-arena/backend/: .env.example  app_state.py  cache_manager.py  discover_heygen_avatars.py  discover_heygen_voices.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
the-arena/backend/avatar/: __init__.py  heygen.py
the-arena/backend/data/01-start-here/: README.md  index.json
the-arena/backend/data/03-podcasts/: aishwarya-naresh-reganti--kiriti-badam.md  albert-cheng.md  alexander-embiricos.md  andrew-wilkinson.md  asha-sharma.md  ben-horowitz.md  benjamin-mann.md  boris-cherny.md  brendan-foody.md  bret-taylor.md  brian-halligan.md  chip-conley.md  chip-huyen.md  dan-shipper.md  dhanji-r-prasanna.md  dr-becky-kennedy.md  dr-fei-fei-li.md  (+20 more)
the-arena/backend/debate/: __init__.py  engine.py  personas.py  safety.py
the-arena/backend/debate_cache/: ai-replacing-pms__jeetu-patel__jenny-wen.json  ai-startups-moats__benjamin-mann__marc-andreessen.json  design-matters__bret-taylor__jenny-wen.json  founder-mode__ben-horowitz__brian-halligan.json  okrs-theater__ben-horowitz__jason-cohen.json  plg-vs-sales__elena-verna__jason-m-lemkin.json  pms-should-code__boris-cherny__chip-huyen.json  remote-vs-office__ben-horowitz__brian-halligan.json
the-arena/backend/ingestion/: __init__.py  parser.py
the-arena/backend/rag/: __init__.py  vectorstore.py
the-arena/backend/routers/: __init__.py  debate.py  guests.py
the-arena/backend/scripts/: pregenerate.py
the-arena/backend/voice/: __init__.py  elevenlabs.py  tts_preprocessor.py
(+32 files in other folders)
